# ntl_resilience_polarization

./: .gitignore  README.md  make_fani_ensemble_prediction_vs_actual_maps_windows.py  make_fani_model_prediction_vs_actual_maps_windows.py  make_slow_recovery_risk_map_windows_v4.py  pyproject.toml  requirements.txt
configs/: base.yaml  data_sources.yaml  features.yaml  gee.yaml  model_gru.yaml  model_lgbm.yaml  model_tcn.yaml  model_transformer.yaml  targets.yaml  validation.yaml
outputs/metrics/: performance_summary.csv
scripts/: 00_init_project.py  01_build_event_catalog.py  02_make_grid.py  03_ingest_ntl.py  04_build_grid_event_ntl_sequences.py  05_make_recovery_metrics.py  06_make_targets.py  07_make_hazard_features.py  08_make_socioeconomic_features.py  09_build_modeling_dataset.py  10_make_splits.py  11_check_leakage.py  20_train_lgbm_baseline.py  21_train_rf_logistic_baselines.py  30_train_tcn_multitask.py  31_train_gru_multitask.py  32_train_transformer_multitask.py  40_ensemble.py  50_evaluate_all.py  60_make_outputs.py  68_download_india_boundaries.py  69_check_gee_setup.py  70_gee_export_vnp46a2_daily.py  71_gee_export_gpm_event_rainfall.py  72_gee_export_ghsl_static_features.py  73_build_cyclone_hazard_from_ibtracs.py  74_gee_export_vnp46a2_monthly_optional.py  80_run_after_raw_downloads.py
src/ntlpol/: __init__.py  config.py  io_utils.py  logging_utils.py  paths.py
src/ntlpol/data/: build_modeling_dataset.py  build_ntl_sequence.py  cyclone_hazard.py  event_catalog.py  hazard_features.py  ingest_ntl.py  (+4 more)
webapp/: app.py
webapp/templates/: index.html
(+27 files in other folders)
