[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ntl-resilience-polarization"
version = "0.1.0"
description = "Grid-level NTL time-series framework for post-disaster recovery polarization analysis in India."
readme = "README.md"
requires-python = ">=3.10"
authors = [
  { name = "researcher" }
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.black]
line-length = 100

[tool.ruff]
line-length = 100
select = ["E", "F", "I", "UP", "B"]
ignore = []
